HelloQTSample fixes/improvements - Read the Qt5_Dir environment variable if it's there - Log Qt5_Dir value - Remove vs2015 unused ref - Fix compilation   * add main.cpp   * fix exec.qrc by making it a real qrc and not a rc...   * add a blank.png file to be consumed as resource   * disable pch on rcc output cpp file, can't be used since it lacks its include   * set output to exe   * add required libs to linker   * disable exception from MS headers   * set a more recent winSdk - Update refs

--- a/samples/QTFileCustomBuild/codebase/exec.qrc
+++ b/samples/QTFileCustomBuild/codebase/exec.qrc
@@ -1,2 +1,6 @@
-IDI_ICON1		ICON		DISCARDABLE	"QtExe.ico"
+<!DOCTYPE RCC><RCC version="1.0">
+<qresource>
+    <file>blank.png</file>
+</qresource>
+</RCC>
 
